[gd_scene load_steps=3 format=3 uid="uid://dokr100roi6uv"]

[ext_resource type="Script" uid="uid://dg6alntsvpbh6" path="res://login/control.gd" id="1_3c14k"]
[ext_resource type="Texture2D" uid="uid://ci5s24q1vqwke" path="res://assets/fonds/Fondo.png" id="2_ncmtk"]

[node name="LoginScreen" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 2648.0
offset_bottom = 1411.0
script = ExtResource("1_3c14k")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_right = 1606.0
offset_bottom = 895.0

[node name="Label" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 568.0
offset_top = 345.0
offset_right = 661.0
offset_bottom = 377.0
theme_override_font_sizes/font_size = 23
text = "Usuario:"

[node name="username_line" type="LineEdit" parent="Panel"]
layout_mode = 0
offset_left = 536.0
offset_top = 434.0
offset_right = 716.0
offset_bottom = 465.0

[node name="Label2" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 558.0
offset_top = 528.0
offset_right = 692.0
offset_bottom = 560.0
theme_override_font_sizes/font_size = 23
text = "Contraseña:"

[node name="password_line" type="LineEdit" parent="Panel"]
layout_mode = 0
offset_left = 519.0
offset_top = 637.0
offset_right = 719.0
offset_bottom = 668.0
secret = true

[node name="login_button" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 988.0
offset_top = 387.0
offset_right = 1146.0
offset_bottom = 443.0
theme_override_font_sizes/font_size = 23
text = "Iniciar sesión"

[node name="register_button" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 980.0
offset_top = 559.0
offset_right = 1149.0
offset_bottom = 613.0
theme_override_font_sizes/font_size = 24
text = "Registrarse"

[node name="error_label" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 204.0
offset_top = 545.0
offset_right = 390.0
offset_bottom = 602.0

[node name="Fondo" type="Sprite2D" parent="."]
show_behind_parent = true
position = Vector2(805, 445.5)
scale = Vector2(1.04818, 0.870117)
texture = ExtResource("2_ncmtk")
